# VMMail

./: CMakeLists.txt  README.md
src/: AccountFolderViewModel.h  AccountSettings.cpp  AccountSettings.h  AddressListFrame.cpp  AddressListFrame.h  EmailClientApp.cpp  EmailClientApp.h  EmailEditorFrame.cpp  EmailEditorFrame.h  EmailService.cpp  EmailService.h  MainFrame.cpp  MainFrame.h  MessageListViewModel.h  VMMail.rc
src/bitmaps/: about.xpm  addaccount.xpm  aligncenter.xpm  alignjustify.xpm  alignleft.xpm  alignright.xpm  attach.xpm  bgcolor.xpm  bold.xpm  clearformatting.xpm  delattach.xpm  delete.xpm  email.xpm  fgcolor.xpm  font.xpm  forward.xpm  group.xpm  insertlink.xpm  italic.xpm  mms.xpm  move.xpm  ordered.xpm  read.xpm  refresh.xpm  reply.xpm  replyall.xpm  send.xpm  strikethrough.xpm  subscript.xpm  superscript.xpm  tsize1.xpm  tsize2.xpm  underline.xpm  unordered.xpm  unread.xpm  write.xpm  write2.xpm
src/formbuilder/: BaseGUIClasses.cpp  BaseGUIClasses.h  VMMailForms.fbp
